PF-809 Clone GCS Bucket Definition (#375)
